--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     </section>
     <footer>
       <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
-      <a class="social-icon"><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
-      <a href="https://github.com/markf121" class="social-icon"><img src="img/"></a>
+      <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
+      <a href="https://github.com/markf121" ><img src="img/git-wrap" class="social-icon" alt="github logo" ></a>
       <p>&copy; 2015 Mark Flanagan</p>
     </footer>
     </div>
