Fixed code to match image file names

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </header>
     <div id="wrapper">
     <section >
-      <img src="img/mark-sunrise.jpg" alt="Self portrait" class="profile-photo">
+      <img src="img/profile-2.jpg" alt="Self portrait" class="profile-photo">
       <h3>About</h3>
       <p>
         Hi, I'm Mark! This is a test website I'm made to practice front-end web development skills. I have included photos of some of my silly adventures!
