--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <footer>
       <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
       <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
-      <a href="https://github.com/markf121" ><img src="img/git-wrap" class="social-icon" alt="github logo" ></a>
+      <a href="https://github.com/markf121" ><img src="img/git-wrap.png" class="social-icon" alt="github logo" ></a>
       <p>&copy; 2015 Mark Flanagan</p>
     </footer>
     </div>
