Fixed footer to include github logo

--- a/about.html
+++ b/about.html
@@ -36,8 +36,9 @@
     </section>
     <footer>
       <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
-      <a class="social-icon"><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
-      <p>&copy; 2014 Mark Flanagan</p>
+      <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
+      <a href="https://github.com/markf121" ><img src="img/git-wrap.png" class="social-icon" alt="github logo" ></a>
+      <p>&copy; 2015 Mark Flanagan</p>
     </footer>
     </div>
   </body>
