Added project work with images and links to projects on github

--- a/about.html
+++ b/about.html
@@ -19,6 +19,8 @@
         <ul>
           <li><a href="index.html" >Portfolio</a></li>
           <li><a href="about.html" class="selected">About</a></li>
+          <li><a href="education.html" >Education</a></li>
+          <li><a href="interests.html">Interests</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -28,16 +30,14 @@
       <img src="img/profile-2.jpg" alt="Self portrait" class="profile-photo">
       <h3>About</h3>
       <p>
-        Hi, I'm Mark! This is a test website I'm made to practice front-end web development skills. I have included photos of some of my silly adventures!
-      </p>
-      <p>
-        If you'd like to see more of my adventures follow my blog of <a href="http://tradventuretime.tumblr.com/">Tradventures!</a>
+        Hi, I'm Mark! This webiste is a portfolio for me and my work.
       </p>
     </section>
     <footer>
       <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
       <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
       <a href="https://github.com/markf121" ><img src="img/git-wrap.png" class="social-icon" alt="github logo" ></a>
+      <a href="https://www.linkedin.com/in/markf121"><img src="img/linkedin-wrap.png" class="social-icon" alt="linkedin logo"></a>
       <p>&copy; 2015 Mark Flanagan</p>
     </footer>
     </div>
