--- a/interests.html
+++ b/interests.html
@@ -20,27 +20,17 @@
           <li><a href="index.html" >Portfolio</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="education.html" >Education</a></li>
-          <li><a href="interests.html">Interests</a></li>
-          <li><a href="contact.html" class="selected">Contact</a></li>
+          <li><a href="interests.html" class="selected">Interests</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <div id="wrapper">
-    <section id="primary">
-      <h3>Contact details</h3>
-      <p>
-        If you have any queries or would like to get in contact please don't hesitate to do so!
-      </p>
-      <p>The best way to contact me is by email. Phone should be reserved for urgent purposes only.</p>
-    </section>
-    <section id="secondary">
-      <ul>
-        <li class="phone"><a href="tel:555-6868">555-6868</a></li>
-        <li class="mail"><a href="mailto:markf121@hotmail.com">markf121@hotmail.com</a></li>
-        <li class="twitter"><a href="http://www.twitter.com/flarkmanagan">@flarkmanagan</a></li>
 
-      </ul>
+    <div id="wrapper">
+    <section >
+      
     </section>
+    
     <footer>
       <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
       <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
