Migrated the specific content of each page to index.html

--- a/index.html
+++ b/index.html
@@ -52,8 +52,35 @@
       <p>Mark Flanagan is a hard-working, self-driven student in his second year of a BSc. Honours degree in Computer Science in Dublin Institute of Technology. He is a strong advocate of practical learning and takes every opportunity to learn new skills and undertake challenges.</p>
       <p>During his degree in Dublin Institute of Technology (DIT) Mark has become well-versed in several programming languages such as C and C# and has a good understanding and progressive proficiency of Java, learned through Processing, a derivative of Java that has a focus on vector graphics. He is also proficient in HTML, CSS, and MySQL. He has experience using applications such as: Microsoft Visual Studio 2012, Google App Engine and phpMyAdmin.</p>
       <p>Mark is an exceedingly outgoing person who enjoys stepping out of his comfort-zone at every opportunity. He has undertaken many sporting and volunteering roles from a very young age. Through these roles he has developed a bedrock of soft skills including organisational skills, teamwork and communication, leadership, and time management.</p>
+    </section>
+
+    <div id="about">
+    <section >
+      <img src="img/profile-2.jpg" alt="Self portrait" class="profile-photo">
+      <h3>About</h3>
+      <p>
+        Hi, I'm Mark! This webiste is a portfolio for me and my work.
+      </p>
+    </section>
+    </div>
+
+    <div id="contact">
+      <section id="primary">
+        <h3>Contact details</h3>
+        <p>
+          If you have any queries or would like to get in contact please don't hesitate to do so!
+        </p>
+        <p>The best way to contact me is by email. Phone should be reserved for urgent purposes only.</p>
       </section>
-    
+      <section id="secondary">
+        <ul>
+          <li class="phone"><a href="tel:555-6868">555-6868</a></li>
+          <li class="mail"><a href="mailto:markf121@hotmail.com">markf121@hotmail.com</a></li>
+          <li class="twitter"><a href="http://www.twitter.com/flarkmanagan">@flarkmanagan</a></li>
+
+        </ul>
+      </section>
+    </div>
     <footer>
       <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
       <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
