--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script type="text/javascript" src="js/portfolio.js"></script>
   </head>
-  <body>
+  <body onload="showIndex()">
     <header>
       <a href ="index.html" id="logo">
         <h1>Mark Flanagan</h1>
