Extend show/hide functionality to About page.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <ul>
           <li><a href="index.html" class="selected">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a onclick="showAbout()">About</a></li>
           <li><a href="education.html" >Education</a></li>
           <li><a href="interests.html">Interests</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -27,6 +27,7 @@
       </nav>
     </header>
     <div id="wrapper">
+    <div id="index">
     <section>
     <h3>Work</h3>
       <ul id = "gallery">
@@ -54,6 +55,7 @@
       <p>During his degree in Dublin Institute of Technology (DIT) Mark has become well-versed in several programming languages such as C and C# and has a good understanding and progressive proficiency of Java, learned through Processing, a derivative of Java that has a focus on vector graphics. He is also proficient in HTML, CSS, and MySQL. He has experience using applications such as: Microsoft Visual Studio 2012, Google App Engine and phpMyAdmin.</p>
       <p>Mark is an exceedingly outgoing person who enjoys stepping out of his comfort-zone at every opportunity. He has undertaken many sporting and volunteering roles from a very young age. Through these roles he has developed a bedrock of soft skills including organisational skills, teamwork and communication, leadership, and time management.</p>
     </section>
+    </div>
 
     <div id="about">
     <section >
