Added education section to index page.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
         </ul>
       </section>
     </div>
+
+    <div>
+      <section>
+        <h3>Education</h3>
+        <p><strong>Dublin Institute of Techology</strong></p>
+        <p><em>Bachelor of Science (B.Sc.), Computer Science</em></p>
+        <p>2012 - 2016</p>
+        <hr>
+      </section>
+
+      <section>
+        <p><strong>Newpark Comprehensive School</strong></p>
+        <p><em>Leaving Certificate</em></p>
+        <p>2006 - 2012</p>
+      </section>
+    </div>
+
     <footer>
       <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
       <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
