Added JS functionality to show and hide education and contact page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <ul>
           <li><a href="index.html" class="selected">Portfolio</a></li>
           <li><a onclick="showAbout()">About</a></li>
-          <li><a href="education.html" >Education</a></li>
-          <li><a href="interests.html">Interests</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a onclick="showEdu()" >Education</a></li>
+          <li><a onclick="">Interests</a></li>
+          <li><a onclick="showContact()">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -85,7 +85,7 @@
       </section>
     </div>
 
-    <div>
+    <div id="education">
       <section>
         <h3>Education</h3>
         <p><strong>Dublin Institute of Techology</strong></p>
