Add a text file of assignment requirements. Added work experience content.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mark Flanagan | Computer Scientist</title>
+    <title> Mark Flanagan | C12474988 </title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic,800|Changa+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
@@ -21,8 +21,7 @@
           <li><a href="index.html" class="selected">Portfolio</a></li>
           <li><a onclick="showAbout()">About</a></li>
           <li><a onclick="showEdu()" >Education</a></li>
-          <li><a onclick="">Interests</a></li>
-          <li><a onclick="showContact()">Contact</a></li>
+          <li><a onclick="showExperience()">Experience</a></li>
         </ul>
       </nav>
     </header>
@@ -98,6 +97,24 @@
         <p><strong>Newpark Comprehensive School</strong></p>
         <p><em>Leaving Certificate</em></p>
         <p>2006 - 2012</p>
+      </section>
+    </div>
+
+    <div id="experience">
+      <section>
+        <h3>Experience</h3>
+        <p><strong>Datacentre Intern</strong></p>
+        <p><em>Betfair</em></p>
+        <p>January 2015 - July 2015</p>
+        <p>As a Datacentre Intern in Betfair I learned how to work in a high pressure environment and maintain very high standards under the guidance of the Datacentre Operations team. During my internship I worked with the DC team and other infrastructure teams to delivery services and resolve issues efficiently and to a high standard.</p>
+
+      </section>
+
+      <section>
+        <p><strong>IT relocation</strong></p>
+        <p><em>Delivery Services</em></p>
+        <p>December 2013 - December 2014</p>
+        <p>I work as a team to disconnect, move and reconnect office workstations on a large scale. Orchestrate and execute large scale moves of office IT equipment. Effectively communicate unresolvable issues to on-site IT teams. Employed knowledge and understanding of computer software and hardware to fix any errors or problems that arose when reconnecting computers.</p>
       </section>
     </div>
 
