Fix null TypeError

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected" onclick="showThis(index)">Portfolio</a></li>
-          <li><a onclick="showThis(about)">About</a></li>
-          <li><a onclick="showThis(education)" >Education</a></li>
-          <li><a onclick="showThis(experience)">Experience</a></li>
+          <li><a href="index.html" class="selected" onclick="showThis('index')">Portfolio</a></li>
+          <li><a onclick="showThis('about')">About</a></li>
+          <li><a onclick="showThis('education')" >Education</a></li>
+          <li><a onclick="showThis('experience')">Experience</a></li>
         </ul>
       </nav>
     </header>
