Added interests under the about section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="index" >
     <section>
     <h3>Work</h3>
-      <ul id = "gallery">
+      <ul class="gallery">
         <li>
           <a href="http://floopbox.appspot.com/">
           <img src="img/googleappengine.jpg" alt="googel appengine logo">
@@ -64,6 +64,31 @@
         Hi, I'm Mark! This webiste is a portfolio for me and my work.
       </p>
     </section>
+
+    <section>
+      <h3>Interests</h3>
+      <p>My free time is as important to me as my work and education. As I do with my academic/work time I use my free time wisely! Here are a few things I get up to...</p>
+
+      <ul class="gallery">
+        <li>
+          <img src="img/fairhead-1.jpg">
+          <p>Climbing in Fairhead</p>
+        </li>
+        
+        <li>
+          <img src="img/fairhead-2.jpg">
+          <p>One of many impressive views at Fairhead</p>
+        </li>
+
+        <li>
+          <img src="img/dalkey-alexandria">
+          <p>Climbing in Dalkey Quarry in Dublin</p>
+        </li>
+      </ul>
+
+
+    </section>
+
     </div>
 
     <div id="education" class="hidden">
