Fixed css reference error for interests section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="interests">
       <h3>Interests</h3>
       <p>My free time is as important to me as my work and education. As I do with my academic/work time I use my free time wisely! Here are a few things I get up to...</p>
 
@@ -81,7 +81,7 @@
         </li>
 
         <li>
-          <img src="img/dalkey-alexandria">
+          <img src="img/dalkey-alexandria.jpg">
           <p>Climbing in Dalkey Quarry in Dublin</p>
         </li>
       </ul>
