Fixed gallery sizing issue. Still one image to fix.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected" onclick="showThis('index')">Portfolio</a></li>
+          <li><a href="index.html" onclick="showThis('index')">Portfolio</a></li>
           <li><a onclick="showThis('about')">About</a></li>
           <li><a onclick="showThis('education')" >Education</a></li>
           <li><a onclick="showThis('experience')">Experience</a></li>
@@ -67,7 +67,8 @@
 
     <section id="interests">
       <h3>Interests</h3>
-      <p>My free time is as important to me as my work and education. As I do with my academic/work time I use my free time wisely! Here are a few things I get up to...</p>
+      <p>My free time is as important to me as my work and education. As I do with my academic/work time I use my free time wisely! My biggest passion is rock climbing and the outdoors so if I'm not at a computer screen developing or playing video games I am most likely hanging out of a cliff somewhere.
+      <p>Here are a few things I get up to...</p>
 
       <ul class="gallery">
         <li>
