Added new list item to portfolio

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul class="gallery">
         <li>
           <a href="http://floopbox.appspot.com/">
-          <img src="img/googleappengine.jpg" alt="googel appengine logo">
+          <img src="img/googleappengine.jpg" alt="google appengine logo">
           <p>An image sharing web application to explore the google appengine stack</p>
           </a>
         </li>
@@ -41,6 +41,13 @@
           <a href="https://github.com/markf121/Graph-Traversal/">
           <img src="img/graph-traversal.png" alt="graph example">
           <p>A command line program written in C# to demomstrate traversal of a weighted graph</p>
+          </a>
+        </li>
+
+        <li>
+          <a href="https://github.com/markf121/RichWebPortfolio">
+            <img src="img/my-website.jpg" alt="screenshot of this website">
+            <p>This website is hosted on github!</p>
           </a>
         </li>
         
