Added new list item to portfolio

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <li>
           <a href="https://github.com/markf121/RichWebPortfolio">
-            <img src="img/my-website.JPG" alt="screenshot of this website">
+            <img src="img/mywebsite.png" alt="screenshot of this website">
             <p>This website is hosted on github!</p>
           </a>
         </li>
