Added skills section with some styling. Pushing to check if display is being overridden

--- a/index.html
+++ b/index.html
@@ -116,6 +116,22 @@
     </div>
 
     <div id="experience" class="hidden">
+      <section id="skills">
+      <h3>Skills</h3>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+          <li>Responsive Web Design</li>
+
+          <li>Android Application Development</li>
+          <li>Java</li>
+          <li>C#</li>
+          <li>Object Oriented Programming</li>
+
+        </ul>
+      </section>
+
       <section>
         <h3>Experience</h3>
         <p><strong>Datacentre Intern</strong></p>
