Made image gallery responsive on about page

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 
       <ul class="gallery">
         <li>
-          <img src="img/fairhead-1.jpg">
+          <a href=""><img src="img/fairhead-1.jpg"></a>
           <p>Climbing in Fairhead</p>
         </li>
         
         <li>
-          <img src="img/fairhead-2.jpg">
+          <a href=""><img src="img/fairhead-2.jpg">
           <p>One of many impressive views at Fairhead</p>
-        </li>
+        </li></a>
 
         <li>
-          <img src="img/dalkey-alexandria.jpg">
+          <a href=""><img src="img/dalkey-alexandria.jpg">
           <p>Climbing in Dalkey Quarry in Dublin</p>
-        </li>
+        </li></a>
       </ul>
 
 
