Made image gallery responsive on about page

--- a/index.html
+++ b/index.html
@@ -79,19 +79,25 @@
 
       <ul class="gallery">
         <li>
-          <a href=""><img src="img/fairhead-1.jpg"></a>
-          <p>Climbing in Fairhead</p>
+          <a href="">
+            <img src="img/fairhead-1.jpg"><
+            <p>Climbing in Fairhead</p>
+          </a>
         </li>
         
         <li>
-          <a href=""><img src="img/fairhead-2.jpg">
-          <p>One of many impressive views at Fairhead</p>
-        </li></a>
+          <a href="">
+            <img src="img/fairhead-2.jpg">
+            <p>One of many impressive views at Fairhead</p>
+          </a>
+        </li>
 
         <li>
-          <a href=""><img src="img/dalkey-alexandria.jpg">
-          <p>Climbing in Dalkey Quarry in Dublin</p>
-        </li></a>
+          <a href="">
+            <img src="img/dalkey-alexandria.jpg">
+            <p>Climbing in Dalkey Quarry in Dublin</p>
+          </a>
+        </li>
       </ul>
 
 
