Fixed html tree structure inconsistency

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <ul class="gallery">
         <li>
           <a href="">
-            <img src="img/fairhead-1.jpg"><
+            <img src="img/fairhead-1.jpg">
             <p>Climbing in Fairhead</p>
           </a>
         </li>
