Cleaned up external JS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Mark Flanagan</h1>
         <h2>Computer Scientist</h2>
         </a>
-      <nav>
+      <nav id="navigation">
         <ul>
           <li><a onclick="showThis('index'); selectedLink(this.id)" id="index-link">Portfolio</a></li>
           <li><a onclick="showThis('about'); selectedLink(this.id)" id="about-link">About</a></li>
