Image loading locally but not on gh-pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
         <li>
           <a href="https://github.com/markf121/RichWebPortfolio">
-            <img src="img/mywebsite.PNG" alt="screenshot of this website">
+            <img src="img/github-octocat.jpg" alt="screenshot of this website">
             <p>This website is hosted on github!</p>
           </a>
         </li>
