--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
       <section id="awards">
         <h3>Awards and Honours</h3>
         <ul>
-          <li></li>
+          <li>Irish Water Safety certified Pool Lifeguard</li>
+          
         </ul>
         
       </section>
@@ -142,15 +143,15 @@
       <section id="skills">
       <h3>Skills</h3>
         <ul>
-          <li>HTML5</li>
-          <li>CSS</li>
-          <li>Javascript</li>
-          <li>Responsive Web Design</li>
+          <li><strong>HTML5</strong></li>
+          <li><strong>CSS</strong></li>
+          <li><strong>Javascript</strong></li>
+          <li><strong>Responsive Web Design</strong></li>
 
-          <li>Android Application Development</li>
-          <li>Java</li>
-          <li>C#</li>
-          <li>Object Oriented Programming</li>
+          <li><strong>Android Application Development</strong></li>
+          <li><strong>Java</strong></li>
+          <li><strong>C#</strong></li>
+          <li><strong>Object Oriented Programming</strong></li>
 
         </ul>
       </section>
