--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> Mark Flanagan | C12474988 </title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic,800|Changa+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic,800%7CChanga+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -163,9 +163,7 @@
         <p>January 2015 - July 2015</p>
         <p>As a Datacentre Intern in Betfair I learned how to work in a high pressure environment and maintain very high standards under the guidance of the Datacentre Operations team. During my internship I worked with the DC team and other infrastructure teams to delivery services and resolve issues efficiently and to a high standard.</p>
 
-      </section>
 
-      <section>
         <p><strong>IT relocation</strong></p>
         <p><em>Delivery Services</em></p>
         <p>December 2013 - December 2014</p>
@@ -175,24 +173,33 @@
 
 
     <div id="contact" class="hidden">
-      <section id="primary">
+      <section id="contact-details">
+      <div id="primary">
         <h3>Contact details</h3>
         <p>
           If you have any queries or would like to get in contact please don't hesitate to do so!
         </p>
         <p>The best way to contact me is by email. Phone should be reserved for urgent purposes only.</p>
-      </section>
-      <section id="secondary">
+      </div>
+      <div id="secondary">
         <ul>
           <li class="phone"><a href="tel:555-6868">555-6868</a></li>
           <li class="mail"><a href="mailto:markf121@hotmail.com">markf121@hotmail.com</a></li>
           <li class="twitter"><a href="http://www.twitter.com/flarkmanagan">@flarkmanagan</a></li>
 
         </ul>
+      </div>
       </section>
     </div>
 
     <footer>
+    <p>
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fmarkf121.github.io%2FRichWebPortfolio%2Fcss%2Fstyle.css&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=en">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
       <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
       <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
       <a href="https://github.com/markf121" ><img src="img/git-wrap.png" class="social-icon" alt="github logo" ></a>
