--- a/index.html
+++ b/index.html
@@ -193,18 +193,22 @@
     </div>
 
     <footer>
-    <p>
-    <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fmarkf121.github.io%2FRichWebPortfolio%2Fcss%2Fstyle.css&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=en">
-        <img style="border:0;width:88px;height:31px"
-            src="http://jigsaw.w3.org/css-validator/images/vcss"
+      <div id="social-icons">
+        <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
+        <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
+        <a href="https://github.com/markf121" ><img src="img/git-wrap.png" class="social-icon" alt="github logo" ></a>
+        <a href="https://www.linkedin.com/in/markf121"><img src="img/linkedin-wrap.png" class="social-icon" alt="linkedin logo"></a>
+      </div>
+      <div id="validator-icons">
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fmarkf121.github.io%2FRichWebPortfolio%2Fcss%2Fstyle.css&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=en">
+        <img src="img/valid-css3.png"
             alt="Valid CSS!" />
-    </a>
-</p>
-      <a href="http://www.twitter.com" ><img src="img/twitter-wrap.png" alt ="twitter logo" class="social-icon"></a>
-      <a ><img src="img/facebook-wrap.png" alt ="facebook logo" class="social-icon" ></a>
-      <a href="https://github.com/markf121" ><img src="img/git-wrap.png" class="social-icon" alt="github logo" ></a>
-      <a href="https://www.linkedin.com/in/markf121"><img src="img/linkedin-wrap.png" class="social-icon" alt="linkedin logo"></a>
+      </a>
+
+        <a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fmarkf121.github.io%2FRichWebPortfolio%2Findex.html"><img src="img/valid-html5.png" alt="W3C HTML5 Valid"/></a>
+      </div>
       <p>&copy; 2015 Mark Flanagan</p>
+
     </footer>
     </div>
   </body>
