Added functionality to increase text size to improve site accessibility

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <li><a onclick="showThis('contact'); selectedLink(this.id)" id="contact-link">Contact</a></li>
         </ul>
       </nav>
+
+      <div id="text-up" class="textModifier" onclick="increaseText(this.id)"><p>A&#9650;</p></div>
+      <div id="text-down" class="textModifier" onclick="decreaseText(this.id)"><p>A&#9660;</p> </div>
+
     </header>
     <div id="wrapper">
     <div id="index" >
