Fix: Text size button. Unlinked normalize.css.migrated responsive rules to style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title> Mark Flanagan | C12474988 </title>
-    <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic,800%7CChanga+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
     
@@ -191,7 +190,7 @@
           <img src="img/valid-html5.png" alt="W3C HTML5 Valid"/>
           </a>
       </div>
-      <p>&copy; 2015 Mark Flanagan</p>
+      <p>Created by Mark Flanagan 2015</p>
     </footer>
     </div>
   </body>
